--- a/cluster-config/namespaces.yaml
+++ b/cluster-config/namespaces.yaml
@@ -1,14 +1,64 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: kube-system
+  labels:
+    app: kube-system
+    control-plane: controller-manager
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: dev
+  labels:
+    app: dev
+  annotations:
+    linkerd.io/inject: enabled
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
   name: staging
+  labels:
+    app: staging
+  annotations:
+    linkerd.io/inject: enabled
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
   name: production
+  labels:
+    app: production
+  annotations:
+    linkerd.io/inject: enabled
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: falco
+  labels:
+    app: falco
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: linkerd
+  labels:
+    app: linkerd
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: ingress
+  labels:
+    app: ingress
+  annotations:
+    linkerd.io/inject: enabled
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: gatekeeper-system
+  labels:
+    app: gatekeeper-system
