--- a/cluster-config/np-allow-consolidated.yaml
+++ b/cluster-config/np-allow-consolidated.yaml
@@ -51,7 +51,21 @@ spec:
   - Ingress
   - Egress
   ingress:
-    - {}
+    - from: []
+      ports:
+      - port: 80
+        protocol: TCP
+    - from:
+      - ipBlock:
+        cidr: 100.64.1.0/24
+      ports:
+      - port: 80
+        protocol: TCP
+    - from:
+      - namespaceSelector:
+          matchLabels:
+            linkerd.io/is-control-plane: "true"
+      - podSelector: {}
   egress:
     - to:
       - podSelector: {}
