--- a/cluster-config/nginx-ingress.yaml
+++ b/cluster-config/nginx-ingress.yaml
@@ -217,6 +217,8 @@ kind: Service
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "contosofinsvcsubnet"
   labels:
     app: nginx-ingress
     chart: nginx-ingress-1.24.4
@@ -226,6 +228,8 @@ metadata:
   name: nginx-ingress-controller
   namespace: ingress
 spec:
+  clusterIP: ""
+  loadBalancerIP: "100.64.2.232"
   externalTrafficPolicy: "Cluster"
   ports:
     - name: http
@@ -257,6 +261,7 @@ metadata:
   name: nginx-ingress-default-backend
   namespace: ingress
 spec:
+  clusterIP: ""
   ports:
     - name: http
       port: 80
