--- a/cluster-config/nginx-ingress.yaml
+++ b/cluster-config/nginx-ingress.yaml
@@ -218,6 +218,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "contosofinsvcsubnet"
   labels:
     app: nginx-ingress
     chart: nginx-ingress-1.24.4
@@ -227,7 +228,7 @@ metadata:
   name: nginx-ingress-controller
   namespace: ingress
 spec:
-  loadBalancerIP: "100.64.1.232"
+  loadBalancerIP: "100.64.2.4"
   externalTrafficPolicy: "Cluster"
   ports:
     - name: http
