--- a/cluster-config/rbac-namespaces.yaml
+++ b/cluster-config/rbac-namespaces.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: dev
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: admin
 subjects:
 - apiGroup: rbac.authorization.k8s.io
@@ -19,7 +19,7 @@ metadata:
   namespace: dev
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: view
 subjects:
 - apiGroup: rbac.authorization.k8s.io
@@ -33,7 +33,7 @@ metadata:
   namespace: staging
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: admin
 subjects:
 - apiGroup: rbac.authorization.k8s.io
@@ -44,10 +44,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: aksrbac-staging-reader
-  namespace: production
+  namespace: staging
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: view
 subjects:
 - apiGroup: rbac.authorization.k8s.io
@@ -61,7 +61,7 @@ metadata:
   namespace: production
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: admin
 subjects:
 - apiGroup: rbac.authorization.k8s.io
@@ -75,7 +75,7 @@ metadata:
   namespace: production
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: view
 subjects:
 - apiGroup: rbac.authorization.k8s.io
