--- a/cluster-config/kubecost.yaml
+++ b/cluster-config/kubecost.yaml
@@ -1,5 +1,12 @@
 ---
 # Source: cost-analyzer/charts/grafana/templates/podsecuritypolicy.yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kubecost
+  labels:
+    name: kubecost
+---
 
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
@@ -46,6 +53,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: kubecost-grafana
+  namespace: kubecost
   labels:
     app: grafana
     chart: grafana-1.17.2
@@ -63,6 +71,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   labels:
     app: grafana
     chart: grafana-1.17.2
@@ -86,6 +95,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   name: kubecost-grafana
   labels:
     app: grafana
@@ -123,6 +133,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   labels:
     component: "alertmanager"
     app: prometheus
@@ -146,6 +157,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   labels:
     component: "server"
     app: prometheus
@@ -402,6 +414,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kubecost-cost-analyzer
+  namespace: kubecost
   labels:
     
     app.kubernetes.io/name: cost-analyzer
@@ -418,6 +431,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   name: nginx-conf
   labels:
     
@@ -486,6 +500,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   name: cluster-metrics-dashboard
   labels:
     
@@ -2166,6 +2181,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   name: cluster-utilization-dashboard
   labels:
     
@@ -5656,6 +5672,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   name: deployment-utilization-dashboard
   labels:
     
@@ -7120,6 +7137,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   name: label-cost-dashboard
   labels:
     
@@ -8602,6 +8620,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   name: namespace-utilization-dashboard
   labels:
     
@@ -9775,6 +9794,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   name: node-utilization-dashboard
   labels:
     
@@ -11162,6 +11182,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   name: pod-utilization-dashboard
   labels:
     
@@ -11977,6 +11998,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: kubecost
   name: grafana-datasource
   labels:
     
@@ -12002,6 +12024,7 @@ data:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  namespace: kubecost
   labels:
     component: "alertmanager"
     app: prometheus
@@ -12021,6 +12044,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  namespace: kubecost
   labels:
     component: "pushgateway"
     app: prometheus
@@ -12040,6 +12064,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  namespace: kubecost
   labels:
     component: "server"
     app: prometheus
@@ -12059,6 +12084,7 @@ spec:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
+  namespace: kubecost
   name: kubecost-cost-analyzer
   labels:
     
@@ -12079,6 +12105,7 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: kubecost
   labels:
     app: grafana
     chart: grafana-1.17.2
@@ -12091,6 +12118,7 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: kubecost
   labels:
     component: "alertmanager"
     app: prometheus
@@ -12103,6 +12131,7 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: kubecost
   labels:
     component: "kube-state-metrics"
     app: prometheus
@@ -12115,6 +12144,7 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: kubecost
   labels:
     component: "node-exporter"
     app: prometheus
@@ -12127,6 +12157,7 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: kubecost
   labels:
     component: "pushgateway"
     app: prometheus
@@ -12140,6 +12171,7 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: kubecost
   labels:
     component: "server"
     app: prometheus
@@ -12153,6 +12185,7 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: kubecost
   name: kubecost-cost-analyzer
   labels:
     
@@ -12168,6 +12201,7 @@ metadata:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
+  namespace: kubecost
   labels:
     app: grafana
     chart: grafana-1.17.2
@@ -12184,6 +12218,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
+  namespace: kubecost
   labels:
     component: "kube-state-metrics"
     app: prometheus
@@ -12308,6 +12343,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  namespace: kubecost
   name: kubecost-cost-analyzer
   labels:
     
@@ -12405,6 +12441,7 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
+  namespace: kubecost
   name: kubecost-grafana-clusterrolebinding
   labels:
     app: grafana
@@ -12425,6 +12462,7 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
+  namespace: kubecost
   labels:
     component: "kube-state-metrics"
     app: prometheus
@@ -12446,6 +12484,7 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
+  namespace: kubecost
   labels:
     component: "server"
     app: prometheus
@@ -12467,6 +12506,7 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  namespace: kubecost
   name: kubecost-cost-analyzer
   labels:
     
@@ -12489,6 +12529,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
+  namespace: kubecost
   name: kubecost-grafana
   labels:
     app: grafana
@@ -12506,6 +12547,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
+  namespace: kubecost
   name: kubecost-grafana
   labels:
     app: grafana
@@ -12524,6 +12566,7 @@ subjects:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: kubecost
   name: kubecost-grafana
   labels:
     app: grafana
@@ -12547,6 +12590,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: kubecost
   labels:
     component: "alertmanager"
     app: prometheus
@@ -12571,6 +12615,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: kubecost
   annotations:
     prometheus.io/scrape: "true"
     
@@ -12599,6 +12644,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: kubecost
   annotations:
     prometheus.io/scrape: "true"
     
@@ -12626,6 +12672,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: kubecost
   annotations:
     prometheus.io/probe: pushgateway
     
@@ -12653,6 +12700,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: kubecost
   labels:
     component: "server"
     app: prometheus
@@ -12677,6 +12725,7 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
+  namespace: kubecost
   name: kubecost-cost-analyzer
   labels:
     
@@ -12708,6 +12757,7 @@ spec:
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
+  namespace: kubecost
   labels:
     component: "node-exporter"
     app: prometheus
@@ -12769,6 +12819,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: kubecost
   name: kubecost-grafana
   labels:
     app: grafana
@@ -12902,6 +12953,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: kubecost
   labels:
     component: "alertmanager"
     app: prometheus
@@ -12992,6 +13044,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: kubecost
   labels:
     component: "kube-state-metrics"
     app: prometheus
@@ -13036,6 +13089,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: kubecost
   labels:
     component: "pushgateway"
     app: prometheus
@@ -13094,6 +13148,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: kubecost
   labels:
     component: "server"
     app: prometheus
@@ -13185,6 +13240,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: kubecost
   name: kubecost-cost-analyzer
   labels:
     
@@ -13348,6 +13404,7 @@ spec:
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
+  namespace: kubecost
   name: cost-analyzer-checks
   labels:
     
