--- a/app/charts/imageclassifier/values.yaml
+++ b/app/charts/imageclassifier/values.yaml
@@ -22,8 +22,8 @@ web:
     annotations:
       kubernetes.io/ingress.class: nginx
       nginx.ingress.kubernetes.io/ssl-redirect: "false"
-      #nginx.ingress.kubernetes.io/rewrite-target: /$1$2
-      #nginx.ingress.kubernetes.io/use-regex: "true"
+      nginx.ingress.kubernetes.io/rewrite-target: /$1$2
+      nginx.ingress.kubernetes.io/use-regex: "true"
       nginx.ingress.kubernetes.io/upstream-vhost: imageclassifierweb.dev.svc.cluster.local:80
       nginx.ingress.kubernetes.io/configuration-snippet: |
         proxy_hide_header l5d-remote-ip;
@@ -31,9 +31,8 @@ web:
     hosts:
       - host: ""
         paths:
-        - "/"
-        #- "/(.*)"
-        #- "/imageshub/negotiate/.*"
+        - "/(.*)"
+        - "/staging/(.*)"
     tls: []
     #  - secretName: chart-example-tls
     #    hosts:
