--- a/cluster-config/rbac-cluster.yaml
+++ b/cluster-config/rbac-cluster.yaml
@@ -23,3 +23,31 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: Group
   name: "d70935a4-42bb-4564-b95f-0f168de2f428"
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+    name: containerHealth-log-reader
+rules:
+    - apiGroups: ["", "metrics.k8s.io", "extensions", "apps"]
+      resources:
+         - "pods/log"
+         - "events"
+         - "nodes"
+         - "pods"
+         - "deployments"
+         - "replicasets"
+      verbs: ["get", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+    name: containerHealth-read-logs-global
+roleRef:
+    kind: ClusterRole
+    name: containerHealth-log-reader
+    apiGroup: rbac.authorization.k8s.io
+subjects:
+- kind: User
+  name: clusterUser
+  apiGroup: rbac.authorization.k8s.io
