Updated linkerd network policy rules.

--- a/cluster-config/np-allow-consolidated.yaml
+++ b/cluster-config/np-allow-consolidated.yaml
@@ -117,6 +117,9 @@ spec:
             app: dev
       - namespaceSelector:
           matchLabels:
+            app: staging
+      - namespaceSelector:
+          matchLabels:
             app: ingress
     - to:
       - namespaceSelector:
